--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -2,5 +2,5 @@ FROM wordpress:php7.1
 
 RUN { \
 		echo 'post_max_size=50M'; \
-		echo 'upload_max_filesize=100M'; \
+		echo 'upload_max_filesize=50M'; \
 	} > "$PHP_INI_DIR/php.ini"
