--- a/php-apache/Dockerfile
+++ b/php-apache/Dockerfile
@@ -24,7 +24,7 @@ RUN { \
 
 RUN { \
 		echo 'post_max_size=50M'; \
-		echo 'upload_max_filesize=100M'; \
+		echo 'upload_max_filesize=50M'; \
 	} > "$PHP_INI_DIR/php.ini"
 	
 RUN a2enmod rewrite headers
